[package]
name = "rust-connection-pool-api"
version = "0.1.0"
authors = ["Savage.La"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.125"
futures = "0.3.14"
actix-multipart = "0.3.0"
sanitize-filename = "0.3.0"
jsonwebtoken = "7.2.0"
chrono = "0.4.19"
